--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,104 @@
+body {
+    font-family: Arial, sans-serif;
+   background: linear-gradient(91.1deg, rgb(57, 31, 105) -2.3%, rgb(115, 43, 155) 44.4%, rgb(231, 75, 184) 103.4%);;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+}
+
+.login-container {
+    width: 350px;
+    background: transparent;
+   border: 2px solid rgba(255, 255, 255, 2);
+ backdrop-filter: blur(20px);
+   box-shadow: 0 0 10px rgba(0, 0, 0, 2);
+    color: #fff;
+    border-radius: 10px;
+    padding: 18px 28px;
+}
+
+.login-container h1 {
+    font-size: 20px;
+    text-align: center;
+}
+
+.login-container .form-group {
+  position: relative;
+    width: 90%;
+    height: 27px;
+    margin: 12px 0;
+}
+.form-group input {
+  width: 85%;
+  height: 40%;
+  background: transparent;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(255, 255, 255, 2);
+  border-radius: 40px;
+  font-size: 15px;
+  color: #fff;
+  padding: 12px 32px 12px 12px;
+}
+.form-group input::placeholder {
+  color: #fff;
+}
+.form-group i {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translatey(-50%);
+  font-size: 20px;
+}
+.login-container .remember {
+  display: flex;
+  justify-content: space-between;
+  font-size: 12.5px;
+  margin: 10px 0 10px;
+}
+.remember label input {
+ accent-color: #fff;
+ margin-right: 3px;
+}
+.remember a {
+  color: #fff;
+  text-decoration: none;
+}
+.remember a:hover {
+  text-decoration: underline;
+}
+button {
+    width: 100%;
+    height: 45px;
+    background: #ffff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+    cursor: pointer;
+    font-size: 15px;
+    color: #333;
+    font-weight: 600;
+}
+
+button:hover {
+    background: transparent;
+    border: 1px solid white;
+    color: black;
+}
+button .register {
+  font-size: 12.5px;
+  text-align: center;
+  margin: 12px 0 8px;
+}
+.register p a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+}
+.register p a:hover {
+  text-decoration: underline;
+}
 
